# rag-with-milvus-langchain-streamlit

./: LICENSE  README.md  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml  test_notebook.ipynb
backend/src/: .env-template  app.py  langgraph_agent.py  models.py  prompt_utils.py  tools.py
deployment/: README.md  docker-compose.yml
docs/: concepts.md  configuration.md  connecting.md  initialize.md  maintenance.md  monitoring.md  overview.md  querying.md  support.md
frontend/: Dockerfile  README.md  pyproject.toml
frontend/src/: api_client.py  app.py
frontend/tests/: test_app.py
pipelines/: README.md  config.yaml  pipeline.py  pyproject.toml
