[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ssgrummons <ssgrummo@us.ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.3.22"
markdown = "^3.7"
python-frontmatter = "^1.1.0"
keybert = "^0.9.0"
pymilvus = "^2.5.6"
spacy = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
